Working join/quite version by copy
