# src/main/kotlin/org/laelith/vtt/api/experience/ExperienceFlows.kt
@@ -6,6 +6,6 @@ import org.laelith.vtt.domain.DiceRollResults
 import org.laelith.vtt.domain.Experience
 
 class ExperienceFlows(private val experience: Experience) {
-    val experienceFlow: MutableStateFlow<Experience>? = MutableStateFlow(experience)
+    val experienceFlow: MutableStateFlow<Experience> = MutableStateFlow(experience)
     val rollsFlow: MutableSharedFlow<DiceRollResults> = MutableSharedFlow()
 }
